# preparation_for_the_internship

./: README.md
py_test/: README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  tests.py
py_test/py_test/: asgi.py  settings.py  urls.py  wsgi.py
py_test/simple_db/: admin.py  models.py
py_test/simple_db/migrations/: 0001_initial.py
pydantic/: .env  README.md  example_env_valid_pydantic.py  example_pydantic.py  inval.env  pyproject.toml  val.env  Исправил ссылки
